# robometrics

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: metrics.md
examples/: generate_demolog.py
examples/configs/: metrics.yaml  mining_rules.yaml
src/robometrics/: __init__.py  __main__.py  cli.py
src/robometrics/adapters/: __init__.py  demolog.py
src/robometrics/eval/: __init__.py  engine.py
src/robometrics/io/: parquet.py  run_io.py
src/robometrics/metrics/: __init__.py  base.py  loader.py  util.py
src/robometrics/metrics/builtin/: __init__.py  efficiency.py  motion.py  reliability.py  safety.py  task.py
src/robometrics/mining/: miner.py  rules.py
src/robometrics/model/: __init__.py  event.py  metric_result.py  run.py  scenario.py  scenarioset.py  scorecard.py  spec.py  stream.py
src/robometrics/validate/: schema_report.py
tests/: test_artifact_roundtrip.py  test_cli_ingest_demolog.py  test_cli_mine.py  test_demolog_generator_and_adapter.py  test_event.py  test_metric_result.py  test_metrics_builtin_golden.py  test_metrics_missing_inputs.py  test_metrics_plugin_loading.py  test_mining_event_rules.py  test_mining_threshold_deadlock.py  test_run.py  test_run_io_roundtrip.py  test_scenario.py  test_schema_report.py  test_smoke_cli.py  test_stream_serialization.py  test_stream_slice.py
